xr-20201221-add-metadata * header.html - fixed alignment of `Join Us` button * crisis.html - add description + image * act-now.html - add description + default image * main.scss - added some CSS classes * _layouts - added Opening / Closing comments for easier debugging of site (understanding where each piece came from)

--- a/_sass/desktop.scss
+++ b/_sass/desktop.scss
@@ -189,6 +189,8 @@
 
   .donate-join-desktop{
     margin-left: 85px;
+    display: flex;
+    align-items: center;
     .page-link{
       margin-right: 20px
     }
